Sutter Health/src/objects/Patient__c.object
<CustomObject>
    <description>The Patient object is used to store all patient information.</description>
    <fields>
        <fullName>Patient_City__c</fullName>
        <label>Patient City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_DotOne__c</fullName>
        <description>The Epic unique patient identifier called the &quot;.1&quot;</description>
        <externalId>true</externalId>
        <label>Patient_DotOne</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Patient_EMPI__c</fullName>
        <description>The MDM Hub EMPI value</description>
        <label>Patient_EMPI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_EPI_ID__c</fullName>
        <description>External ID used to match a patient record to the equivalent record in the Initiate MDM repository when updating and/or inserting.</description>
        <inlineHelpText>Patient EPI-ID from Initiate MDM.</inlineHelpText>
        <label>Patient EPI-ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Gender__c</fullName>
        <label>Patient Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Middle_Name__c</fullName>
        <label>Patient Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone_Home__c</fullName>
        <label>Patient Home Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone_Mobile__c</fullName>
        <label>Patient Mobile Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone_Other__c</fullName>
        <label>Patient Other Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone_Work__c</fullName>
        <label>Patient Work Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_SHMRN__c</fullName>
        <description>The new Epic MRN value. To be populated in the futuer (est. 11/1/13)</description>
        <label>Patient_SHMRN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_SSN_E__c</fullName>
        <description>Last 4 digits of a patient&apos;s SSN</description>
        <inlineHelpText>Last 4 digits only.</inlineHelpText>
        <label>Patient SSN</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Patient_State__c</fullName>
        <label>Patient State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Street__c</fullName>
        <label>Patient Street</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Zip__c</fullName>
        <label>Patient ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soft_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to hide Patients soft deleted in EPIC</description>
        <label>Soft Delete</label>
        <type>Checkbox</type>
    </fields>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>